2006-09-05  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-visit-buffer): Use buffer name if buffer arg is a buffer.

2006-09-05  Daiki Ueno  <ueno@unixuser.org>

	* pgg.el (pgg-clear-string): Alias to clear-string for backward
	compatibility.

	* pgg-gpg.el (pgg-gpg-process-region): Avoid display blinking with
	inhibit-redisplay; encode passphrase with locale-coding-system.

2006-09-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add more C-M- bindings.

2006-09-05  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-list-children-regexp)
	(gdb-var-list-children-regexp): Make type field optional.

	* progmodes/gud.el (gud-speedbar-buttons): Allow for no type
	e.g public, protected in C++.

2006-09-04  John Paul Wallington  <jpw@pobox.com>

	* simple.el (completion-show-help): New defcustom.
	(completion-setup-function): Heed it.

2006-09-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add C-M- bindings.

2006-09-04  Richard Stallman  <rms@gnu.org>

	* mail/rmail-spam-filter.el (rsf-scanning-messages-now): Doc fix.
	(rsf-min-region-to-spam-list): Doc fix.
	(rsf-add-content-type-field): Doc fix.

	* simple.el (kill-region): Explicitly test there is a region.

2006-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* mail/feedmail.el (feedmail-buffer-to-sendmail): Look for
	sendmail in several common directories.

	* mail/sendmail.el (sendmail-program): Moved here from pathe.el.

	* paths.el (sendmail-program): Removed.

2006-09-04  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Revert two patches from Satyaki
	Das.  http://article.gmane.org/gmane.emacs.gnus.general/49947
	http://article.gmane.org/gmane.emacs.gnus.general/50457

2006-09-03  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (custom-group-menu-create): Avoid deactivating the
	mark after running the menu filter.

2006-09-03  Juri Linkov  <juri@jurta.org>
